--- a/angular.json
+++ b/angular.json
@@ -25,9 +25,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
-            ],
-            "scripts": []
+              "src/styles.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css"
+              ],
+              "scripts": []
           },
           "configurations": {
             "production": {
@@ -87,12 +88,16 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
-            ],
-            "scripts": []
+              "src/styles.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css"
+              ],
+              "scripts": []
           }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "c0f5072f-8de3-4838-80b8-7d8c881a7467"
   }
 }
